feat: add SEO metadata and og image

--- a/index.html
+++ b/index.html
@@ -1,11 +1,91 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <title>EcommClips - Criador de Vídeos IA</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="theme-color" content="#0284c7" />
+    <title>Ecomm Clips | Crie Vídeos com IA para Marketplaces</title>
+    <meta
+      name="description"
+      content="Transforme fotos de produtos em vídeos profissionais com IA em segundos. Aumente a conversão em anúncios e marketplaces com narração automática. Teste agora."
+    />
+    <meta
+      name="keywords"
+      content="vídeo com ia, e-commerce, marketplace, anúncios de vídeo, fotos em vídeo, criativos automáticos, inteligência artificial para vendas, Ecomm Clips"
+    />
+    <meta name="author" content="Ecomm Flow Estratégias Digitais LTDA" />
+    <meta name="robots" content="index, follow" />
+
+    <link rel="canonical" href="https://www.ecommclips.com.br/" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.ecommclips.com.br/" />
+    <meta
+      property="og:title"
+      content="Ecomm Clips | Transforme Fotos em Vídeos que Vendem"
+    />
+    <meta
+      property="og:description"
+      content="Crie clipes que convertem. Use IA para gerar vídeos com narração e roteiro a partir de fotos simples. Ideal para Mercado Livre, Shopee e Ads."
+    />
+    <meta
+      property="og:image"
+      content="https://www.ecommclips.com.br/assets/og-image.png"
+    />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:site_name" content="Ecomm Clips" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Ecomm Clips | Vídeos de Produto com IA"
+    />
+    <meta
+      name="twitter:description"
+      content="Aumente suas vendas com vídeos gerados por IA. Sem edição, sem filmagem. Apenas resultados."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.ecommclips.com.br/assets/og-image.png"
+    />
+
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Ecomm Clips",
+        "operatingSystem": "Web",
+        "applicationCategory": "BusinessApplication",
+        "offers": {
+          "@type": "Offer",
+          "price": "20.00",
+          "priceCurrency": "USD",
+          "name": "Plano Pro"
+        },
+        "description": "Ferramenta de IA que transforma fotos estáticas em vídeos profissionais para e-commerce e anúncios.",
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "ratingCount": "120"
+        },
+        "author": {
+          "@type": "Organization",
+          "name": "Ecomm Flow Estratégias Digitais LTDA",
+          "url": "https://www.ecommclips.com.br",
+          "logo": "https://www.ecommclips.com/assets/logo.png",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "contactType": "customer support",
+            "areaServed": "BR",
+            "availableLanguage": "Portuguese"
+          }
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
