--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     />
     <meta
       property="og:image"
-      content="https://www.ecommclips.com.br/assets/og-image.png"
+      content="https://www.ecommclips.com.br/og-image.png"
     />
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:site_name" content="Ecomm Clips" />
@@ -47,7 +47,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.ecommclips.com.br/assets/og-image.png"
+      content="https://www.ecommclips.com.br/og-image.png"
     />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
