--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       property="og:description"
       content="Crie clipes que convertem. Use IA para gerar vídeos com narração e roteiro a partir de fotos simples. Ideal para Mercado Livre, Shopee e Ads."
     />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta
       property="og:image"
       content="https://www.ecommclips.com.br/og-image.png"
