--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       property="og:description"
       content="Crie clipes que convertem. Use IA para gerar vídeos com narração e roteiro a partir de fotos simples. Ideal para Mercado Livre, Shopee e Ads."
     />
-    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta
       property="og:image"
-      content="https://www.ecommclips.com.br/og-image.png"
+      content="https://www.ecommclips.com.br/og-image.jpg"
     />
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:site_name" content="Ecomm Clips" />
@@ -50,10 +50,10 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.ecommclips.com.br/og-image.png"
+      content="https://www.ecommclips.com.br/og-image.jpg"
     />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" sizes="any" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
     <script type="application/ld+json">
@@ -79,7 +79,7 @@
           "@type": "Organization",
           "name": "Ecomm Flow Estratégias Digitais LTDA",
           "url": "https://www.ecommclips.com.br",
-          "logo": "https://www.ecommclips.com/assets/logo.png",
+          "logo": "https://www.ecommclips.com.br/og-image.jpg",
           "contactPoint": {
             "@type": "ContactPoint",
             "contactType": "customer support",
